// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EcSmartTable should render properly 1`] = `
<div>
  <!---->
   
  <div
    class="ec-table-scroll-container"
    data-test="ec-table-scroll-container"
  >
    <table
      class="ec-table"
    >
      <!---->
       
      <tbody>
        <tr
          data-test="ec-table__row ec-table__row--0"
        >
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--0"
          >
            1
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--1"
          >
            2
          </td>
          <td
            class="ec-table__cell"
            data-test="ec-table__cell ec-table__cell--2"
          >
            3
          </td>
        </tr>
      </tbody>
       
      <!---->
    </table>
  </div>
</div>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column #2 ([DESC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: After sorting different column ([ASC, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should allow sorting multiple columns: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting multi sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting should render sortable columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting should render sorted columns 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted descending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            desc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column #2 ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: After sorting different column ([null, null, ASC]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should allow sorting only one column: Initial state ([ASC, null, null]) 1`] = `
<thead
  class="ec-table-head"
  data-test="ec-table-head"
>
  <tr>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--0"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 1 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Sorted ascending"
        >
          <svg
            class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-drop-down"
            />
          </svg>
           
          <span
            class="ec-table-sort__text"
          >
            asc
          </span>
        </a>
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--1"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 2 
      
        </span>
         
        <!---->
         
        <!---->
      </span>
    </th>
    <th
      class="ec-table-head__cell"
      data-test="ec-table-head__cell ec-table-head__cell--2"
      scope="col"
    >
      <span
        class="ec-table-head__cell-wrapper"
      >
        <span>
          
        Test 3 
      
        </span>
         
        <!---->
         
        <a
          class="ec-table-sort ec-table-head__icon"
          data-test="ec-table-sort"
          href="#"
          title="Not sorted"
        >
          <svg
            class="ec-icon ec-table-sort__icon"
            data-test="ec-table-sort__icon"
            height="16"
            width="16"
          >
            <use
              xlink:href="#ec-simple-arrow-up-down"
            />
          </svg>
           
          <!---->
        </a>
      </span>
    </th>
  </tr>
</thead>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC -> DESC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted descending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--desc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        desc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: DESC -> not sorted 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Not sorted"
    >
      <svg
        class="ec-icon ec-table-sort__icon"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-up-down"
        />
      </svg>
       
      <!---->
    </a>
  </span>
</th>
`;

exports[`EcSmartTable sorting single sort should sort column: not sorted -> ASC 1`] = `
<th
  class="ec-table-head__cell"
  data-test="ec-table-head__cell ec-table-head__cell--0"
  scope="col"
>
  <span
    class="ec-table-head__cell-wrapper"
  >
    <span>
      
        Test 1 
      
    </span>
     
    <!---->
     
    <a
      class="ec-table-sort ec-table-head__icon"
      data-test="ec-table-sort"
      href="#"
      title="Sorted ascending"
    >
      <svg
        class="ec-icon ec-table-sort__icon ec-table-sort__icon--asc"
        data-test="ec-table-sort__icon"
        height="16"
        width="16"
      >
        <use
          xlink:href="#ec-simple-arrow-drop-down"
        />
      </svg>
       
      <span
        class="ec-table-sort__text"
      >
        asc
      </span>
    </a>
  </span>
</th>
`;
